--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -390,11 +390,13 @@
   }
 }
 .swiper-button-prev {
-  left: 0;
-  transform: translate(0, -50%) rotate(180deg);
+  left: -10px !important;
+  transform: translate(-100%, -50%) rotate(180deg) !important;
 }
+
 .swiper-button-next {
-  right: 0;
+  right: -10px !important;
+  transform: translate(100%, -50%) !important;
 }
 
 .actions-top {
