--- a/src/assets/scss/product-card.scss
+++ b/src/assets/scss/product-card.scss
@@ -229,7 +229,7 @@
       width: toRem(8);
       height: toRem(14);
       transition: all 0.5s ease;
-      // background: url('@img/icons/arrow-down.svg') center / 100% no-repeat;
+      background: url("/icons/arrow-down.svg") center / 100% no-repeat;
     }
   }
 }
