--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -231,7 +231,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      // background: url('@img/icons/image.svg') center / cover no-repeat;
+      background: url("/icons/image.svg") center / cover no-repeat;
     }
     input {
       width: 0;
@@ -298,7 +298,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      // background: url('@img/icons/image.svg') center / cover no-repeat;
+      background: url("/icons/image.svg") center / cover no-repeat;
     }
   }
   // .downloads-input-body-file__image
@@ -568,7 +568,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      // background: url('@img/icons/image.svg') center / cover no-repeat;
+      background: url("/icons/image.svg") center / cover no-repeat;
     }
   }
   // .photo-advertisement-contacts__save
