--- a/src/assets/scss/base/maps.scss
+++ b/src/assets/scss/base/maps.scss
@@ -1,3 +1,3 @@
 #map {
-  // background: url("@img/icons/loading.gif") center / 50px no-repeat;
+  background: url("/icons/loading.gif") center / 50px no-repeat;
 }
