--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -80,7 +80,7 @@
       content: "";
       width: toRem(12);
       height: toRem(8);
-      // background: url('@img/icons/check.svg') center no-repeat;
+      background: url("/icons/check.svg") center no-repeat;
       background-size: 12px 8px;
       transform: scale(0);
       transition: all 0.3s ease;
