--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -389,14 +389,17 @@
     }
   }
 }
-.swiper-button-prev {
-  left: -10px !important;
-  transform: translate(-100%, -50%) rotate(180deg) !important;
+
+.swiper-slide {
+  cursor: pointer;
 }
 
+.swiper-button-prev {
+  left: 0;
+  transform: translate(0, -50%) rotate(180deg);
+}
 .swiper-button-next {
-  right: -10px !important;
-  transform: translate(100%, -50%) !important;
+  right: 0;
 }
 
 .actions-top {
