--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -19,10 +19,9 @@
   &__tabs {
   }
   &__block {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: toRem(20);
+    gap: 20px;
   }
 }
 .tabs-advertisement {
@@ -33,15 +32,25 @@
   @media (min-width: $tablet) {
     max-width: toRem(305);
   }
-  &__wrapper {
+  .swiper {
+    overflow: visible !important;
+  }
+  .swiper-wrapper {
     // gap: toRem(40);
     width: 100%;
+    height: fit-content;
     @media (min-width: $tablet) {
       // display: flex;
       flex-direction: column;
       gap: toRem(40);
       transform: translate(0) !important;
     }
+  }
+  .swiper-slide {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: toRem(20);
   }
   .select {
     @media (min-width: $tablet) {
@@ -50,9 +59,13 @@
   }
   .swiper-arrow {
     position: absolute;
+    z-index: 2;
     width: fit-content;
     height: fit-content;
     top: 5px;
+    @media (min-width: $tablet) {
+      display: none;
+    }
     &.swiper-button-disabled {
       svg path {
         fill: #b0bfd7;
@@ -82,15 +95,18 @@
   }
   // .tabs-advertisement__items
   &__items {
-    @media (max-width: $tablet) {
-      display: none;
-    }
     display: flex;
     flex-direction: column;
     gap: toRem(10);
   }
   // .tabs-advertisement__item
   &__item {
+    @media (max-width: $tablet) {
+      display: none;
+    }
+    &--mobile {
+      display: block !important;
+    }
     width: 100%;
     padding: toRem(13);
     border-radius: toRem(5);
@@ -447,6 +463,7 @@
   }
 }
 .advertisement-contacts {
+  width: 100%;
   .body-advertisement__wrapper {
     display: flex;
     justify-content: space-between;
@@ -626,6 +643,7 @@
 .advertisement {
   // .advertisement__block
   &__block {
+    width: 100%;
   }
 }
 .my-advertisement {
