--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -454,6 +454,7 @@
   }
   &__text {
     overflow: hidden;
+    transition: max-height 0.3s ease;
   }
   &__button {
     color: var(--greyColor);
