--- a/src/assets/scss/trade.scss
+++ b/src/assets/scss/trade.scss
@@ -145,16 +145,20 @@
 .item-filter {
   padding-bottom: toRem(20);
   border-bottom: 1px solid var(--border);
-  // .item-filter__title
-  &__title {
+  .spollers__title {
     font-size: toRem(18);
     font-weight: 500;
   }
-  // .item-filter__body
-  &__body {
+  .spollers__content {
     display: flex;
     flex-direction: column;
     gap: toRem(15);
+  }
+  // .item-filter__title
+  &__title {
+  }
+  // .item-filter__body
+  &__body {
   }
   // .item-filter__block
   &__block {
