--- a/src/assets/scss/base/forms/select.scss
+++ b/src/assets/scss/base/forms/select.scss
@@ -130,6 +130,8 @@
 
   // .select__option
   &__option {
+    display: flex;
+    align-items: center;
     width: 100%;
     height: toRem(39);
     text-align: left;
