--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -95,6 +95,10 @@
   }
 }
 
+.custom-checkbox--error {
+  border: 1px solid #ff0000 !important;
+}
+
 .password {
   display: flex;
   align-items: center;
