--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -105,6 +105,7 @@
   justify-content: space-between;
   gap: toRem(10);
   &__input {
+    background: none;
     outline: none;
     width: 100%;
   }
