--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -23,6 +23,11 @@
     flex-direction: column;
     gap: 20px;
   }
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 .tabs-advertisement {
   position: relative;
