--- a/src/assets/scss/trade.scss
+++ b/src/assets/scss/trade.scss
@@ -33,16 +33,21 @@
 }
 .filters-trade {
   width: 100%;
-  max-width: toRem(305);
+  
   display: flex;
   flex-direction: column;
   gap: toRem(30);
+  @media (min-width: $tablet) {
+    max-width: toRem(305);
+
+  }
   // .filters-trade__button
   &__button {
     @media (min-width: $tablet) {
       display: none;
     }
-    max-width: toRem(305);
+    width: 100%;
+    max-width: none;
     gap: toRem(10);
     background-color: #fff;
     border: 1px solid var(--border);
