--- a/src/assets/scss/trade.scss
+++ b/src/assets/scss/trade.scss
@@ -115,6 +115,12 @@
       margin-bottom: toRem(20);
     }
   }
+  &__actions {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: toRem(20);
+  }
   // .body-filters-trade__back
   &__back {
     display: flex;
