--- a/src/assets/scss/product-card.scss
+++ b/src/assets/scss/product-card.scss
@@ -100,6 +100,7 @@
   // .body-product__content
   &__content {
     // max-width: toRem(847);
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: toRem(40);
