--- a/src/assets/scss/advertisement.scss
+++ b/src/assets/scss/advertisement.scss
@@ -241,11 +241,28 @@
 }
 
 .input-body-file {
-  display: flex;
+    max-width: 100%;
+      display: flex;
   flex-direction: column;
   gap: toRem(20);
   // .input-body-file__input
+  &__input-wrapper{
+    max-width: 100%;
+    position: relative;
+    display: grid;
+  }
+  .swiper-button{
+    display: block;
+  }
+  .swiper-button-prev{
+    left: 20px;
+  }
+    .swiper-button-next {
+      right: 20px;
+    }
   &__input {
+    // padding: 0;
+    display: grid;
     position: relative;
     cursor: pointer;
     width: 100%;
