--- a/src/assets/scss/chat.scss
+++ b/src/assets/scss/chat.scss
@@ -7,6 +7,8 @@
   }
   // .chat__wrapper
   &__wrapper {
+    position: relative;
+    overflow: hidden;
     display: flex;
     outline: 1px solid var(--border);
     border-radius: toRem(7);
@@ -26,19 +28,15 @@
   }
 }
 .block-chat {
-  max-width: toRem(413);
   width: 100%;
   height: 100%;
-  border-right: 1px solid var(--border);
   // display: grid;
   display: flex;
   flex-direction: column;
-
-  @media (max-width: $tablet) {
-    max-width: none;
-    display: none;
+  @media (min-width: $tablet) {
+    border-right: 1px solid var(--border);
+    max-width: toRem(413);
   }
-
   // .block-chat__top
   &__top {
   }
@@ -348,12 +346,19 @@
 // =======================================================================================================
 
 .body-chat {
+  position: absolute;
+  z-index: 10;
+  inset: 0;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: #fff;
+  @media (min-width: $tablet) {
+    position: static;
+  }
 
   // .body-chat__content
   &__content {
@@ -418,7 +423,9 @@
 }
 
 .body-chat-empty {
-  display: flex;
+  width: 100%;
+  height: 100%;
+  display: none;
   gap: 8px;
   flex-direction: column;
   align-items: center;
@@ -430,6 +437,9 @@
   &__text {
     font-size: 18px;
     color: #b0bfd7;
+  }
+  @media (min-width: $tablet) {
+    display: flex;
   }
 }
 
