--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -426,11 +426,16 @@
   }
   // .favorite__items
   &__items {
+    width: 100%;
+
     display: grid;
     justify-items: center;
     gap: toRem(20);
     @media (min-width: $mobile) {
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (min-width: $pc) {
+      grid-template-columns: repeat(3, 1fr);
     }
   }
   // .favorite__pages
