add gallery and comments

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -502,3 +502,12 @@
 .custom-radio--error {
   border-color: #ff0000 !important;
 }
+
+.lg-backdrop {
+  background-color: rgba(0, 0, 0, 0.8) !important;
+}
+
+.lg-image {
+  border-radius: 10px;
+  overflow: hidden;
+}
