--- a/src/assets/scss/forum.scss
+++ b/src/assets/scss/forum.scss
@@ -381,6 +381,9 @@
   .editor-statusbar {
     display: none;
   }
+  // .mdxeditor-root-contenteditable {
+  //   min-height: toRem(115);
+  // }
 }
 
 .info-contact {
