--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -520,7 +520,8 @@
 
 .mdxeditor-toolbar {
   width: fit-content;
-  padding: 0px;
+  position: relative;
+  // padding: 0px;
   min-height: 40px;
   background-color: transparent;
   border-radius: toRem(5);
@@ -562,5 +563,130 @@
     li {
       list-style-type: decimal;
     }
+  }
+}
+
+.chat-input {
+  display: flex;
+  border-radius: toRem(5);
+
+  flex-direction: column;
+  gap: 5px;
+  padding: 15px;
+  outline: 1px solid #b0bfd7;
+  background-color: #f8fbff;
+}
+.chat-input_input {
+  background-color: transparent;
+  outline: none;
+  display: block;
+  height: auto;
+  max-height: 100px;
+
+  height: 30px;
+}
+
+.chat-input__add-file {
+  // padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  input {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+  }
+}
+
+.chat-input__images {
+  display: flex;
+  gap: 5px;
+  margin-bottom: 5px;
+}
+
+.chat-input__image-wrapper {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 6px;
+  overflow: hidden;
+  cursor: pointer;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  &::after {
+    content: "✕";
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 2;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
+}
+
+button:disabled {
+  // opacity: 0.8;
+  background-color: #b0bfd7;
+  pointer-events: none;
+}
+
+.chat-input-reply {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 10px;
+  gap: 10px;
+  border-left: 1px solid #1858b8;
+  margin-bottom: 5px;
+}
+
+.chat-input-reply__content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.chat-input-reply__name {
+  font-size: 15px;
+}
+
+.chat-input-reply__text {
+  font-size: 14px;
+  color: #838383;
+}
+
+.chat-input-reply__clear {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  transition: all 0.3s ease;
+  &:hover {
+    scale: 1.1;
+  }
+  img {
+    width: 100%;
+    height: 100%;
   }
 }
