--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -58,7 +58,7 @@
 .check {
   cursor: pointer;
   display: flex;
-  // align-items: center;
+  align-items: center;
   gap: toRem(10);
   height: fit-content;
 
@@ -329,12 +329,29 @@
 .breadcrumbs {
   padding: toRem(15) 0;
   border-bottom: 1px solid var(--border);
-  // .breadcrumbs__prev
-  &__prev {
-   &:after {
-    content: ">";
-    margin: 0 7px;
-   } 
+  // .breadcrumbs__link
+  &__link {
+    position: relative;
+    transition: all 0.3s ease-in-out;
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background-color: var(--blueColor);
+      transition: all 0.3s ease-in-out;
+    }
+    @media (any-hover: hover) {
+      &:hover {
+        color: var(--blueColor);
+        &::before {
+          width: 100%;
+        }
+      }
+    }
   }
   // .breadcrumbs__container
   &__container {
@@ -351,13 +368,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    img {
-      width: 100%;
-      height: 100%;
+    .breadcrumbs__arrow-icon {
+      transition: all 0.3s ease-in-out;
+    }
+    // img {
+    //   width: 100%;
+    //   height: 100%;
+    // }
+    @media (any-hover: hover) {
+      &:hover {
+        .breadcrumbs__arrow-icon {
+          fill: var(--blueColor);
+        }
+      }
     }
   }
   // .breadcrumbs__content
   &__content {
+    display: flex;
+    align-items: center;
+    gap: 5px;
     font-size: toRem(14);
   }
   // .breadcrumbs__current
