--- a/src/assets/scss/forum.scss
+++ b/src/assets/scss/forum.scss
@@ -574,7 +574,41 @@
       }
     }
   }
+  &__block {
+    margin-left: 51px;
+  }
 }
+
+.comment-show-replies {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  transition: all 0.3s ease-in-out;
+  &__arrow {
+    width: toRem(12);
+    height: toRem(7);
+    transition: all 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &.active {
+    .comment-show-replies__arrow {
+      transform: rotate(180deg);
+    }
+  }
+  @media (any-hover: hover) {
+    &:hover {
+      color: var(--blueColor-hover);
+      svg {
+        * {
+          fill: var(--blueColor-hover);
+        }
+      }
+    }
+  }
+}
+
 .user-chat {
   // .user-chat__image
   &__image {
@@ -590,8 +624,6 @@
 }
 
 .body-comment {
-  margin-left: 51px;
-
   padding: toRem(15);
   border-radius: toRem(7);
   border: 1px solid var(--border);
@@ -694,21 +726,6 @@
     font-weight: 300;
   }
   // .answer-button__arroww
-  &__arrow {
-    width: toRem(20);
-    height: toRem(20);
-    transition: all 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &.active {
-      transform: rotate(180deg);
-    }
-    svg {
-      width: toRem(12);
-      height: toRem(7);
-    }
-  }
 }
 
 // =========================================================================
