--- a/src/assets/scss/product-card.scss
+++ b/src/assets/scss/product-card.scss
@@ -1,5 +1,3 @@
-
-
 .product {
   padding-top: toRem(50);
   // .product__container
@@ -17,7 +15,6 @@
 }
 .top-product {
   @media (max-width: $tablet) {
-
     display: none;
   }
   &__body {
@@ -27,7 +24,6 @@
     justify-content: space-between;
     gap: toRem(20);
     @media (max-width: $tablet) {
-      
       flex-direction: column;
       text-align: center;
       align-items: center;
@@ -99,11 +95,14 @@
   }
   // .body-product__content
   &__content {
-    // max-width: toRem(847);
+    @media (min-width: $tablet) {
+      max-width: toRem(847);
+    }
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: toRem(40);
+
     .top-product__body {
       flex-direction: column;
       text-align: center;
@@ -190,6 +189,7 @@
   }
   // .body-product__info
   &__block {
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     gap: toRem(20);
