--- a/src/assets/scss/base/forms/button.scss
+++ b/src/assets/scss/base/forms/button.scss
@@ -4,6 +4,7 @@
 .button {
   cursor: pointer;
   display: inline-flex;
+  gap: 10px;
   align-items: center;
   justify-content: center;
   text-align: center;
