--- a/src/assets/scss/base/forms/select.scss
+++ b/src/assets/scss/base/forms/select.scss
@@ -45,6 +45,14 @@
     width: 100%;
     height: 100%;
     border-radius: 4px;
+    transition: 0.3s ease-in-out;
+    background-color: #f8fbff;
+
+    @media (any-hover: hover) {
+      &:hover {
+        color: var(--blueColor);
+      }
+    }
   }
   // .select__value
   &__value {
