--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -231,6 +231,12 @@
   align-items: center;
   justify-content: space-between;
   gap: toRem(20);
+  transition: 0.3s ease-in-out;
+  @media (any-hover: hover) {
+    &:hover {
+      color: var(--blueColor);
+    }
+  }
 
   // .body-user__account
   &__account {
@@ -277,7 +283,7 @@
 }
 
 // ==========================================================================
-.header-icon {
+.btn-icon {
   position: relative;
   flex: 0 0 toRem(41);
   width: toRem(41);
@@ -286,7 +292,17 @@
   align-items: center;
   justify-content: center;
   border-radius: toRem(4);
+  @media (any-hover: hover) {
+    &:hover {
+      .btn-icon__image {
+        transform: scale(1.1);
+      }
+    }
+  }
+
   &__image {
+    transition: 0.3s ease-in-out;
+
     position: relative;
     flex: 0 0 toRem(20);
     width: toRem(20);
@@ -313,21 +329,58 @@
   }
 }
 
+// .header-icon {
+//   position: relative;
+//   flex: 0 0 toRem(41);
+//   width: toRem(41);
+//   height: toRem(41);
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   border-radius: toRem(4);
+
+//   &__image {
+//     position: relative;
+//     flex: 0 0 toRem(20);
+//     width: toRem(20);
+//     height: toRem(20);
+//     img {
+//       width: 100%;
+//       height: 100%;
+//     }
+//   }
+
+//   &--search {
+//     background-color: #fff;
+//     outline: 1px solid var(--blueColor);
+//   }
+//   &--notify {
+//     background-color: var(--blueColor);
+//   }
+//   &--favorites {
+//     background-color: #fff;
+//     outline: 1px solid var(--blueColor);
+//   }
+//   &--menu {
+//     background-color: var(--text);
+//   }
+// }
+
 .actions-body-header {
   display: flex;
   align-items: center;
   gap: toRem(15);
-  .header-icon--search {
+  .btn-icon--search {
     @media (min-width: $mobile) {
       display: none;
     }
   }
-  .header-icon--notify {
+  .btn-icon--notify {
     @media (min-width: $mobileSmall) {
       display: none;
     }
   }
-  .header-icon--menu {
+  .btn-icon--menu {
     @media (min-width: $tablet) {
       display: none;
     }
