Some fixes + notifications + TODOs

--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -4,6 +4,7 @@
     padding-top: toRem(50);
     padding-bottom: toRem(15);
     background-color: var(--secondary);
+    margin-top: 20px;
     // .footer__container
     &__container {
         display: flex;
